# DiscordClipSaver

./: .env.example  .env.global.example  .gitignore  .prettierrc.json  COMMIT_CONVENTIONS.md  CONTRIBUTING.md  DOCKER_README.md  GET_STARTED.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  deploy.example.sh  docker-compose-prod.yml  docker-compose.yml  settings.default.jsonc  settings.default.yml
bot/: .dockerignore  Dockerfile  api.py  bot.py  docker-compose.yml  main.py  requirements.txt
docs/: ADDING_NEW_SETTINGS.md  CLIPS_VIEWER_OVERHAUL.md  COMMIT_CONVENTIONS.md  DATABASE_POOLING.md  DISCORD_CLIENT_IMPROVEMENTS.md  DOCUMENTATION_SUMMARY.md  ENGINEER_PANEL_SPEC.md  FUNCTIONALITY_SUMMARY.md  FUNCTIONAL_SPEC.md  GUIDE_OVERVIEW.md  HARDCODED_VALUES_ANALYSIS.md  INTERFACE_SETTINGS_REFACTORING_GUIDE.md  LAZY_DELETION_DETECTION.md  LICENSING_STRATEGY.md  LOGGING.md  LOGGING_MIGRATION.md  OPERATIONAL_GUIDE.md  PERFORMANCE_ISSUES.md  PURGE_SYSTEM.md  README.md  (+15 more)
python/shared/: README.md  __init__.py  logger.py  pyproject.toml  requirements.txt  settings.py  settings_loader.py  settings_resolver.py  time.py  user_settings_resolver.py
python/shared/db/: __init__.py  config.py  models.py  repositories.py  types.py  utils.py
python/shared/db/repositories/: __init__.py  authors.py  bulk_operations.py  channel_scan_status.py  channels.py  guild_settings.py  guilds.py  install_intents.py  scan_recovery.py
python/shared/redis/: __init__.py  redis.py  redis_client.py
python/shared/storage/: __init__.py  base.py  factory.py  gcs.py  local.py
(+601 files in other folders)
